--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -18,6 +18,7 @@ Browser.error.launching.item=Error launching item
 Browser.error.saving.bookmarks=Error saving Bookmarks: 
 Browser.error=Error: 
 Browser.home=Home
+Browser.items.selected=\ items selected, 
 Browser.launch.of.items.not.supported=\ items not supported
 Browser.launch.of=Launch of 
 Browser.library.is.not.loaded=Library {0} is not loaded
@@ -30,6 +31,7 @@ Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+ClientStty.disconnecting.sftp=Disconnecting sftp {0}: {1}:
 ClientStty.forcing.request.of.collection.with.s=Forcing request of collection
 DuplicateFinder.action=Action
 DuplicateFinder.analyzing.library=Analyzing library 
@@ -262,10 +264,6 @@ Libraries.add.ignore.4=See Libraries Help for details.
 Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
 Libraries.browser.button.title=Browser ...
 Libraries.cancel.toolTip.text=Cancel all changes
-Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
-Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
-Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
-Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
 Libraries.generate.new.uuid.for=Generate new Key for: 
 Libraries.help=Libraries Help
 Libraries.hint.server=Hint Server
@@ -274,7 +272,6 @@ Libraries.libraries.changes.cancelled=Changes cancelled
 Libraries.libraries.changes.none=No changes to be saved
 Libraries.libraries.changes.saved=Changes saved
 Libraries.library=Library
-Libraries.listIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions.\n\nSee Libraries Help for details.
 Libraries.location=Location
 Libraries.minimum.free.space.for.location=Minimum free space for Location:
 Libraries.minimum.free.space=Minimum Free Space
@@ -301,11 +298,6 @@ Libraries.select.temp.location=Select path for temporary files for
 Libraries.selected.path.is.not.from.repository.continue=<html><body>The selected path is not from repository {0}.<p>Continue?</body></html>
 Libraries.targets=Targets
 Libraries.temp.location=Temporary Files Directory
-Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
-Libraries.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
-Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
-Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
-Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Libraries.that.library.already.exists=That library already exists
 Libraries.that.location.is.already.defined=That Location is already defined
 Libraries.that.source.is.already.defined=That Source is already defined
@@ -314,8 +306,8 @@ Libraries.toggle.all=\ Toggle all
 Libraries.undo=Undo
 Libraries.use.browser.selection=Use Browser selection
 Libraries.use.selected.item=Use selected {0} directory?
-Main.disconnecting.status.server=Disconnecting Hint Status Server
-Main.disconnecting.stty=Disconnecting stty
+Main.disconnecting.status.server=Disconnecting stty: Hint Status Server
+Main.disconnecting.stty=Disconnecting stty: Subscriber
 Main.disconnecting=Disconnecting
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
@@ -454,18 +446,18 @@ Navigator.initialized=Initialized Navigator
 Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table></body></html>
 Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
 Navigator.installed.up.to.date=ELS is up-to-date
-Navigator.labelOperationGettingStarted.text=Click the New button to define parameters for a library
-Navigator.labelKey.text=Key\:
+Navigator.labelCase.text=Case-sensitive\:
+Navigator.labelFlavor.text=Flavor\:
 Navigator.labelHost.text=Host\:
+Navigator.labelIgnores.text=Ignore patterns\:
+Navigator.labelKey.text=Key\:
 Navigator.labelListen.text=Listen\:
+Navigator.labelOperationGettingStarted.text=Click the New button to define parameters for a library
+Navigator.labelSources.text=Sources
 Navigator.labelTempDated.text=Temporary files dated\:
 Navigator.labelTempLocation.text=Temporary files location\:
-Navigator.labelTerminalAllosed.text=Terminal allowed\:
+Navigator.labelTerminalAllowed.text=Terminal allowed\:
 Navigator.labelTimeout.text=Time-out (minutes)\:
-Navigator.labelFlavor.text=Flavor\:
-Navigator.labelCase.text=Case-sensitive\:
-Navigator.labelIgnores.text=Ignore patterns\:
-Navigator.labelSources.text=Sources
 Navigator.libraries=\ libraries
 Navigator.listLibrariesIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions.\n\nSee Libraries Help for details.
 Navigator.locationsTab.tab.mnemonic=L
@@ -723,7 +715,6 @@ Navigator.scanning.publisher=Scanning publisher
 Navigator.scanning.subscriber=Scanning subscriber
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.title=Properties
-Navigator.scrollPaneGeneral.tab.title=text
 Navigator.scrollPaneLog.tab.mnemonic_2=L
 Navigator.scrollPaneProperties.tab.mnemonic_2=O
 Navigator.secondary,context=Log appender updated 
@@ -732,12 +723,12 @@ Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.starting.els.updater=Starting ELS Updater:\ 
-Navigator.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
 Navigator.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
+Navigator.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
 Navigator.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
+Navigator.textFieldLocation.toolTipText=Location
 Navigator.textFieldTempLocation.toolTipText=Directory for temporary file
 Navigator.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
-Navigator.textFieldLocation.toolTipText=Location
 Navigator.unpacking=Unpacking
 Navigator.update.available=ELS update available
 Navigator.update.failed=<html><body>The update <b>failed</b>. See {0} for information.</body></html>
@@ -1037,8 +1028,8 @@ Transfer.mv.directory.file=\  > mv {0, choice, 0#directory |1#file }
 Transfer.no.space.on.any.target.location=No space on any target location of {0} for {1} that is {2}
 Transfer.no.subdirectory.in.path=No subdirectory in path: 
 Transfer.no.target.library.match.found.for.library=No target library match found for library 
-Transfer.of.complete=Transfer of {0} complete
 Transfer.of.cancelled=Transfer of {0} cancelled
+Transfer.of.complete=Transfer of {0} complete
 Transfer.original.storage.location.too.full=Original storage location too full for {0} {1} at {2}
 Transfer.previous.directory.was.not.empty=\  ! Directory was not empty: 
 Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
@@ -1084,9 +1075,9 @@ Z.are.you.sure=Are you sure?
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes.toolTipText=Discard all changes
 Z.cancel.changes=Cancel Changes
+Z.cancel.current.operation=Cancel the current operation
 Z.cancel.download=Cancel Download
 Z.cancel.run=Cancel Run
-Z.cancel.current.operation=Cancel the current operation
 Z.cancel.the.current.operation=Cancel the current operation?
 Z.cancel=Cancel
 Z.cancelled=\ cancelled
@@ -1150,4 +1141,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Browser.items.selected=\ items selected, 
