#153 Fixed detection and creation of ELS configuration subdirectories

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1141,3 +1141,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.remote.connections.must.be.closed=Remote connections must be closed to open a publisher.\nContinue?
