--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -111,6 +111,8 @@ Generator.comboDebugLogLevels.tooltip=Log level for log file
 Generator.combobox.log.overwrite.0.log=Append
 Generator.combobox.log.overwrite.1.logOverwrite=Overwrite
 Generator.combobox.log.overwrite.tooltip=Append or overwrite log output file
+Generator.created.shortcut=Created shortcut: 
+Generator.error.launching=Error launching job: 
 Generator.exists.overwrite=The shortcut already exists, overwrite?
 Generator.foreground.tooltip=Run in separate foreground instance
 Generator.foreground=Foreground
@@ -316,15 +318,16 @@ Libraries.toggle.all=\ Toggle all
 Libraries.undo=Undo
 Libraries.use.browser.selection=Use Browser selection
 Libraries.use.selected.item=Use selected {0} directory?
+LibrariesUI.please.assign.a.key.to.0.before.saving=Please assign a key to {0} before saving
 Main.disconnecting.sftp=Disconnecting sftp {0}: {1}:
 Main.disconnecting.status.server=Disconnecting stty: Hint Status Server
 Main.disconnecting.stty=Disconnecting stty: Subscriber
 Main.disconnecting=Disconnecting
 Main.either.a.publisher.or.authentication.keys.file.is.required=Either a Publisher or Authentication Keys file is required
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
+MainFrame.job.running.are.you.sure=There is a Job running. Are you sure you want to quit?
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
-MainFrame.job.running.are.you.sure=There is a Job running. Are you sure you want to quit?
 NavHelp.error.opening.help.file=Error opening help file:\ 
 NavHelp.name=NavHelp
 NavHelp.title=NavHelp
@@ -386,6 +389,7 @@ NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
 Navigator.HostOrListen.title=Select Remote Address
 Navigator.a.tool.is.active=Another tool is active
+Navigator.appender.updated=Log appender updated 
 Navigator.bibliographyTab.tab.mnemonic_2=Y
 Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.buttonAddLibrary.mnemonic_2=A
@@ -615,8 +619,8 @@ Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemBlacklist.mnemonic=B
 Navigator.menuItemBlacklist.text=Blacklist ...
-Navigator.menuItemChangelist.mnemonic_2=V
-Navigator.menuItemChangelist.text=Version changelist ...
+Navigator.menuItemChangelist.mnemonic=L
+Navigator.menuItemChangelist.text=Changelist ...
 Navigator.menuItemClose.mnemonic=C
 Navigator.menuItemClose.text=Close
 Navigator.menuItemCloseHintKeys.mnemonic=K
@@ -662,7 +666,7 @@ Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
 Navigator.menuItemUpdates.mnemonic=U
-Navigator.menuItemUpdates.text=Check for updates ...
+Navigator.menuItemUpdates.text=Check for Updates ...
 Navigator.menuItemWebSite.mnemonic=W
 Navigator.menuItemWebSite.text=Web Site
 Navigator.menuItemWhitelist.mnemonic=W
@@ -737,7 +741,6 @@ Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.title=Properties
 Navigator.scrollPaneLog.tab.mnemonic_2=L
 Navigator.scrollPaneProperties.tab.mnemonic_2=O
-Navigator.appender.updated=Log appender updated 
 Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
@@ -916,6 +919,7 @@ RenameUI.type.combobox.2.numbering=Numbering
 RenameUI.type.combobox.3.remove=Remove
 RenameUI.type.combobox.4.replace=Replace
 RenameUI.type.combobox.select.type=Select type:
+Renamer..has.no.repository.defined={0} has no repository defined
 Renamer.button.Copy.mnemonic=C
 Renamer.button.Delete.mnemonic=D
 Renamer.button.New.mnemonic=N
@@ -1023,6 +1027,7 @@ Sleep.displayName=Sleep
 Sleep.help=Sleep Help
 Sleep.labelTime.text=Sleep time in minutes\:  
 Sleep.sleep.cancelled=Sleep cancelled
+Sleep.sleeping.minutes=Sleeping {0} minute(s)
 Sleep.stop.running.sleep=Stop running Sleep?
 Sleep.title=Sleep Tool\t
 Task.no.repository.is.defined=Publisher and/or subscriber not defined
@@ -1117,8 +1122,8 @@ Z.hint.server=Hint Server
 Z.hint.tracker=Hint Tracker
 Z.host=\ (Host)
 Z.invalid.selection=Invalid selection\: 
-Z.launching=Launching:\ 
 Z.launching.job=Launching Job:\ 
+Z.launching=Launching:\ 
 Z.listen=\ (Listen)
 Z.local.lowercase=local
 Z.local.uppercase=Local 
@@ -1160,8 +1165,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-LibrariesUI.please.assign.a.key.to.0.before.saving=Please assign a key to {0} before saving
-Generator.created.shortcut=Created shortcut: 
-Generator.error.launching=Error launching job: 
-Sleep.sleeping.minutes=Sleeping {0} minute(s)
-Renamer..has.no.repository.defined={0} has no repository defined
