--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1165,3 +1165,14 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Main.remote.subscriber.failed.to.connect=Remote subscriber: {0}, failed to connect
+Main.publisher.library.or.collection.file.is.required.for.remote.publish=A -p publisher library or -P collection file is required for Remote Publish
+Main.subscriber.library.or.collection.file.is.required.for.remote.publish=A -s subscriber library or -S collection file is required for Remote Publish
+Main.continue=Continue?
+Main.exception.while.reading.hint.keys=Exception while reading Hint Keys: 
+Main.hint.keys.are.required.to.use.hint.tracking=Hint Keys are required to use Hint Tracking
+Main.exception.while.reading.hint.server=Exception while reading Hint Server: 
+Main.hint.status.server.failed.to.connect=Hint Status Server: {0}, failed to connect
+Main.bad.initial.response.from.hint.status.server=Bad initial response from Hint Status Server: 
+Main.exception.while.reading.hint.tracker=Exception while reading Hint Tracker: 
+Main.error.initializing.from.hint.status.server.json.file=Error initializing from hint status server JSON file
