--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -547,12 +547,12 @@ Navigator.menu.Open.hint.tracking.close.current.status.server=Close current Hint
 Navigator.menu.Open.hint.tracking.files=ELS Hint Tracking files (*.json)
 Navigator.menu.Open.hint.tracking.please.open.hints.keys.first=Please open Hint Keys first
 Navigator.menu.Open.hint.tracking=Open ELS Hint Tracking
-Navigator.menu.Open.publisher.collection.radio.tooltip=Running on a media collection, server or back-up
+Navigator.menu.Open.publisher.collection.radio.tooltip=Collection, Hints managed
 Navigator.menu.Open.publisher.collection.radio=Collection
 Navigator.menu.Open.publisher.error.opening.publisher.library=Error opening publisher library: 
 Navigator.menu.Open.publisher.files=ELS Library files (*.json)
 Navigator.menu.Open.publisher.system.type=System type:
-Navigator.menu.Open.publisher.workstation.radio.tooltip=Running on a workstation
+Navigator.menu.Open.publisher.workstation.radio.tooltip=Workstation, no Hints
 Navigator.menu.Open.publisher.workstation.radio=Workstation
 Navigator.menu.Open.publisher=Open ELS Publisher
 Navigator.menu.Open.subscriber.close.current.remote.connection=Close current remote connection?
