Fixed "No support for a Subscriber Listener to work on multiple IP address:ports" #160

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -161,7 +161,7 @@ HintsUI.header.to.library=To Library
 HintsUI.header.utc=Date
 HintsUI.help=Hints Help
 HintsUI.hint.tracker.server.not.enabled=Hint Tracker/Server not enabled
-HintsUI.hints.for={0} Hints, {1} Libraries.  {2} for {3}, {4} for {5}
+HintsUI.hints.for={0} Hints, {1} Libraries.  Connected: {2} for {3}, {4} for {5}
 HintsUI.hints.run.complete=Hints Run Complete:\ 
 HintsUI.hints.selected=\ Hints selected
 HintsUI.labelHelp.toolTipText=Hints Help
@@ -239,6 +239,7 @@ JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.subscriber.local=Local subscriber
 JobsUI.subscriber.remote.host=Remote subscriber (Host, Internet)
 JobsUI.subscriber.remote.listen=Remote subscriber (Listen, LAN)
+JobsUI.subscriber.remote.custom=Remote subscriber (Custom)
 JobsUI.task.has.no.origins=Task has no origins: 
 JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
 JobsUI.title=Jobs
@@ -341,7 +342,6 @@ MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
 NavHelp.error.opening.help.file=Error opening help file:\ 
 NavHelp.name=NavHelp
-NavHelp.title=NavHelp
 NavTransferHandler.action.cancelled=Action cancelled
 NavTransferHandler.are.you.sure.you.want.to={0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
 NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfer to currently selected location
@@ -477,15 +477,18 @@ Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&
 Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.labelCase.text=Case-sensitive\:
+Navigator.labelCustom.text=Custom\:
 Navigator.labelFlavor.text=Flavor\:
 Navigator.labelHost.text=Host\:
 Navigator.labelHostInternet.text=Host (Internet)\:
 Navigator.labelIgnores.text=Ignore patterns\:
 Navigator.labelKey.text=Key\:
+Navigator.labelLibrariesHelp.toolTipText=Libraries Help
 Navigator.labelListen.text=Listen\:
 Navigator.labelListenLan.text=Listen (LAN)\:
 Navigator.labelOperationGettingStarted.text=Click the New button to define parameters for a library
 Navigator.labelPath.text=Path\:
+Navigator.labelRemote.text=Remote connection\:
 Navigator.labelSources.text=Sources
 Navigator.labelTempDated.text=Temporary files dated\:
 Navigator.labelTempLocation.text=Temporary files location\:
@@ -553,7 +556,6 @@ Navigator.menu.Open.hint.keys.error.opening.hint.keys=Error opening hint keys:
 Navigator.menu.Open.hint.keys.files=ELS Hint Keys (*.keys)
 Navigator.menu.Open.hint.keys=Open ELS Hint Keys
 Navigator.menu.Open.hint.tracking.checkbox.tooltip=Be sure a Hint Status Server (--hint-server) is running on the remote system
-Navigator.menu.Open.hint.tracking.checkbox=&nbsp;&nbsp;Remote Hint<br/>&nbsp;&nbsp;Status Server&nbsp;&nbsp;
 Navigator.menu.Open.hint.tracking.close.current.status.server=Close current Hint Status Server connection?
 Navigator.menu.Open.hint.tracking.files=ELS Hint Tracking files (*.json)
 Navigator.menu.Open.hint.tracking.please.open.hints.keys.first=Please open Hint Keys first
@@ -567,15 +569,14 @@ Navigator.menu.Open.publisher.workstation.radio.tooltip=Workstation, no Hints
 Navigator.menu.Open.publisher.workstation.radio=Workstation
 Navigator.menu.Open.publisher=Open ELS Publisher
 Navigator.menu.Open.subscriber.close.current.remote.connection=Close current remote connection?
-Navigator.menu.Open.subscriber.connection.checkbox.tooltip=Be sure an ELS Subscriber Listener (--remote S) is running on the remote system
-Navigator.menu.Open.subscriber.connection.checkbox=&nbsp;&nbsp;Remote<br/>Connection&nbsp;&nbsp;
-Navigator.menu.Open.subscriber.error.opening.hint.library=Error opening hint library: 
+Navigator.menu.Open.hint.error.opening.hint.library=Error opening hint library: 
 Navigator.menu.Open.subscriber.error.opening.subscriber.library=Error opening subscriber library: 
 Navigator.menu.Open.subscriber.files=ELS Library files (*.json)
 Navigator.menu.Open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber failed to connect
 Navigator.menu.Open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 Navigator.menu.Open.subscriber=Open ELS Subscriber
 Navigator.menu.OpenHintKeys.mnemonic=K
+Navigator.menu.Open.valid.port=Please enter a valid host:port with port number > 0 and <= 65535 
 Navigator.menu.OpenHintKeys.text=Open Hint Keys ...
 Navigator.menu.OpenPublisher.mnemonic=P
 Navigator.menu.OpenPublisher.text=Open Publisher ...
@@ -1112,6 +1113,7 @@ Z.changes.cancelled=Changes cancelled
 Z.completed=\ completed
 Z.copy=\ (copy)
 Z.count=Count: 
+Z.custom=\ (Custom)
 Z.delete.configuration=Delete Configuration
 Z.delete=Delete
 Z.deleted=Deleted: 
@@ -1176,3 +1178,5 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.menu.Open.subscriber.connection.checkbox.tooltip=Local Subscriber or Remote?
+HintsUI.not.loaded=<not loaded>
