#164 Library and sftp connect changes, see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1174,3 +1174,4 @@ Main.hint.tracker.server.not.used.for.this.operation=Hint Tracker/Server not use
 OperationsUI.clear.hints=Clear Hint Tracker/Server from the listed references?       \ 
 OperationsUI.hint.status.server.requires.hint.keys=Hint Status Server requires Hint Keys: 
 OperationsUI.hint.status.server.requires.authentication.keys=Hint Status Server requires Authentication Keys: 
+LibraryUI.the.listed.references=\ the listed references?
