Fixed #165 and other enhancements; More testing required

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -175,10 +175,10 @@ HintsUI.status.done=Done
 HintsUI.status.for=For
 HintsUI.status.unknown=Missing or error
 HintsUI.this.title=Hints
-Job.completed.job=Job {0} completed
+Job.completed.job=Job {0} done
+Job.failed.job=Job {0} failed
 Job.config.cancelled=Job {0} cancelled
 Job.continuing.job=Continuing Job:\ 
-Job.ended.with.error=Job {0} ended with an error
 Job.executing.job=Executing Job:\ 
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
