Fixed 165, again, so Subscriber stops with Keep Going disabled; other changes, see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1175,3 +1175,7 @@ OperationsUI.clear.hints=Clear Hint Tracker/Server from the listed references?  
 OperationsUI.hint.status.server.requires.hint.keys=Hint Status Server requires Hint Keys: 
 OperationsUI.hint.status.server.requires.authentication.keys=Hint Status Server requires Authentication Keys: 
 LibraryUI.the.listed.references=\ the listed references?
+Process.sending.quit.command.to.remote.hint.status.server=Sending quit command to remote Hint Status Server
+Process.sending.bye.command.to.remote.hint.status.server=Sending bye command to remote Hint Status Server
+Process.sending.quit.command.to.remote.subscriber=Sending quit command to Remote Subscriber
+Process.sending.bye.command.to.remote.subscriber=Sending bye command to Remote Subscriber
