Fixed 165, again, again. Resolved a few bugs, see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -891,7 +891,7 @@ OperationsUI.listOperationExclude.toolTipText=Included and excluded libraries
 OperationsUI.listOperationIncludeExclude.toolTipText=Included and excluded libraries
 OperationsUI.mode.hintForceQuit=Hint server force quit, -Q
 OperationsUI.mode.hintServer=Hint status server, -H
-OperationsUI.mode.localPublish=Local, or Remote publish, -r P for -r S
+OperationsUI.mode.localPublish=Local or Remote publish, -r P for -r S
 OperationsUI.mode.publisherListener=Publisher listener, -r L for -r T
 OperationsUI.mode.publisherTerminal=Publisher terminal, -r M for -r S
 OperationsUI.mode.select.type=Select ELS operation to configure:
