Progress on #113 Update documentation

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -176,10 +176,10 @@ HintsUI.status.for=For
 HintsUI.status.unknown=Missing or error
 HintsUI.this.title=Hints
 Job.completed.job=Job {0} done
-Job.failed.job=Job {0} failed
 Job.config.cancelled=Job {0} cancelled
 Job.continuing.job=Continuing Job:\ 
 Job.executing.job=Executing Job:\ 
+Job.failed.job=Job {0} failed
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
@@ -216,6 +216,7 @@ JobsUI.combo.select.publisher.or.subscriber=Select Publisher or Subscriber\:
 JobsUI.combo.select.publisher=Select Publisher\:
 JobsUI.combo.select.subscriber=Select Subscriber\:
 JobsUI.help=Jobs Help
+JobsUI.hints.local.tracker=Local Hint Tracker
 JobsUI.hints.remote.host=Remote Hint Server (Host, Internet)
 JobsUI.hints.remote.listen=Remote Hint Server (Listen, LAN)
 JobsUI.job.has.no.tasks=Job has no tasks\: 
@@ -324,6 +325,7 @@ LibrariesUI.please.assign.a.key=Please assign a key to {0}
 LibraryUI.delete=Delete
 LibraryUI.references.for.library.found.in.jobs=References for "{0}" found in Jobs:       
 LibraryUI.rename=Rename
+LibraryUI.the.listed.references=\ the listed references?
 Main.bad.initial.response.from.hint.status.server=Bad initial response from Hint Status Server: 
 Main.continue=Continue?
 Main.disconnecting.sftp=Disconnecting sftp {0}: {1}:
@@ -336,6 +338,7 @@ Main.exception.while.reading.hint.server=Exception while reading Hint Server:
 Main.exception.while.reading.hint.tracker=Exception while reading Hint Tracker: 
 Main.hint.keys.are.required.to.use.hint.tracking=Hint Keys are required to use Hint Tracking
 Main.hint.status.server.failed.to.connect=Hint Status Server: {0}, failed to connect
+Main.hint.tracker.server.not.used.for.this.operation=Hint Tracker/Server not used for this operation
 Main.publisher.library.or.collection.file.is.required.for.remote.publish=A -p publisher library or -P collection file is required for Remote Publish
 Main.remote.subscriber.failed.to.connect=Remote subscriber: {0}, failed to connect
 Main.subscriber.library.or.collection.file.is.required.for.remote.publish=A -s subscriber library or -S collection file is required for Remote Publish
@@ -589,6 +592,7 @@ Navigator.menu.OpenSubscriber.text=Open Subscriber ...
 Navigator.menu.Paste.mnemonic=P
 Navigator.menu.Paste.text=Paste
 Navigator.menu.PlexGenerator.text=ELS Plex Generator
+Navigator.menu.Preferences.text=Preferences ...
 Navigator.menu.Progress.mnemonic=P
 Navigator.menu.Progress.text=Progress
 Navigator.menu.Quit.mnemonic=Q
@@ -611,8 +615,6 @@ Navigator.menu.Restore.text=Restore
 Navigator.menu.Save.layout.error.saving.layout=Error saving layout: 
 Navigator.menu.SaveLayout.mnemonic_3=L
 Navigator.menu.SaveLayout.text=Save Layout
-Navigator.menu.Settings.mnemonic=S
-Navigator.menu.Settings.text=Settings ...
 Navigator.menu.ShowHidden.mnemonic=H
 Navigator.menu.ShowHidden.text=Show Hidden
 Navigator.menu.SplitHorizontal.mnemonic=H
@@ -673,11 +675,11 @@ Navigator.menuItemOpenHintTracking.mnemonic_2=T
 Navigator.menuItemOpenHintTracking.text=Open Hint Tracking ...
 Navigator.menuItemOperations.mnemonic=O
 Navigator.menuItemOperations.text=Operations ...
+Navigator.menuItemPreferences.mnemonic=P
 Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemRefresh.mnemonic=F
 Navigator.menuItemReleaseNotes.mnemonic=R
 Navigator.menuItemReleaseNotes.text=Release Notes ...
-Navigator.menuItemShowToolbar.mnemonic=T
 Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
@@ -746,7 +748,7 @@ Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
 Navigator.preferences.saved=Preferences saved
 Navigator.radioButtonAutoRefresh.text=Auto-Refresh
-Navigator.recent.changes=Changelist
+Navigator.recent.changes=Latest Changelist
 Navigator.release.notes=Release Notes
 Navigator.remote.connections.must.be.closed=Remote connections must be closed to open a publisher.\nContinue?
 Navigator.saveButton.mnemonic=O
@@ -827,6 +829,7 @@ OperationsUI.checkBoxOperationPreserveDates.toolTipText=Copy file dates instead 
 OperationsUI.checkBoxOperationPreserveDates2.toolTipText=Copy file dates instead of using "now"
 OperationsUI.checkBoxOperationQuitStatus.toolTipText=Instruct Hint Status Server to quit at end of session
 OperationsUI.checkBoxOperationValidate.toolTipText=Validate the publisher JSON file and quit
+OperationsUI.clear.hints=Clear Hint Tracker/Server from the listed references?       \ 
 OperationsUI.comboBoxOperationHintKeys.0.keys=Hint keys\:
 OperationsUI.comboBoxOperationHintKeys.1.keysOnly=Hint keys, only\:
 OperationsUI.comboBoxOperationHintKeys.prototypeDisplayValue=Hint keys, only
@@ -848,6 +851,8 @@ OperationsUI.els.what.s.new.file=ELS What's New file (*.txt)
 OperationsUI.els.whitelist.file=ELS Whitelist file (*.txt)
 OperationsUI.exclude=Exclude: 
 OperationsUI.help=Operations Help
+OperationsUI.hint.status.server.requires.authentication.keys=Hint Status Server requires Authentication Keys: 
+OperationsUI.hint.status.server.requires.hint.keys=Hint Status Server requires Hint Keys: 
 OperationsUI.include.selections=Include selections
 OperationsUI.include=Include: 
 OperationsUI.is.a.duplicate=\ is a duplicate
@@ -884,9 +889,9 @@ OperationsUI.labelOperationTargets.text=Targets\:
 OperationsUI.labelOperationTargets2.text=Targets\:
 OperationsUI.labelOperationValidate.text=Validate\:
 OperationsUI.labelOperationsMismatches.text=Mismatches\:
+OperationsUI.labelOperationsQuitHints.text=No options for Quit operations
 OperationsUI.labelOperationsQuitter.text=No options for Quit operations
 OperationsUI.labelOperationsTerminal.text=No options for Terminal operations
-OperationsUI.labelOperationsQuitHints.text=No options for Quit operations
 OperationsUI.listOperationExclude.toolTipText=Included and excluded libraries
 OperationsUI.listOperationIncludeExclude.toolTipText=Included and excluded libraries
 OperationsUI.mode.hintForceQuit=Hint server force quit, -Q
@@ -905,6 +910,10 @@ OperationsUI.select.excluded.libraries=Select excluded libraries:
 OperationsUI.select.included.excluded.libraries=Select included/excluded libraries:
 OperationsUI.subscriber.libraries=Subscriber libraries
 OperationsUI.uncheck.to.exclude.selections=Uncheck to exclude selections
+Process.sending.bye.command.to.remote.hint.status.server=Sending bye command to remote Hint Status Server
+Process.sending.bye.command.to.remote.subscriber=Sending bye command to Remote Subscriber
+Process.sending.quit.command.to.remote.hint.status.server=Sending quit command to remote Hint Status Server
+Process.sending.quit.command.to.remote.subscriber=Sending quit command to Remote Subscriber
 Progress.buttonCancel.text=Cancel
 Progress.not.active=No processes active
 Progress.title.dryrun=Dry-Run Progress
@@ -1021,7 +1030,7 @@ Settings.tabPlacement.right=Right
 Settings.tabPlacement.top=Top
 Settings.tabPlacementLabel.text=Tab placement\:
 Settings.textField.HintButtonColor.toolTipText=RGB color in hex, i.e. FF009F. Clear to use default.
-Settings.this.title=Navigator Settings
+Settings.this.title=Navigator Preferences
 Settings.tooltipLargeTableCheckBox.toolTipText=Show table tooltips on everything > 1000 rows
 Settings.tooltipLargeTableLabel.text=Tooltips on large tables\:
 Settings.use.last.PubSub.CheckBox.toolTipText=Use the previous publisher and/or subscriber if not specified
@@ -1169,13 +1178,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-JobsUI.hints.local.tracker=Local Hint Tracker
-Main.hint.tracker.server.not.used.for.this.operation=Hint Tracker/Server not used for this operation
-OperationsUI.clear.hints=Clear Hint Tracker/Server from the listed references?       \ 
-OperationsUI.hint.status.server.requires.hint.keys=Hint Status Server requires Hint Keys: 
-OperationsUI.hint.status.server.requires.authentication.keys=Hint Status Server requires Authentication Keys: 
-LibraryUI.the.listed.references=\ the listed references?
-Process.sending.quit.command.to.remote.hint.status.server=Sending quit command to remote Hint Status Server
-Process.sending.bye.command.to.remote.hint.status.server=Sending bye command to remote Hint Status Server
-Process.sending.quit.command.to.remote.subscriber=Sending quit command to Remote Subscriber
-Process.sending.bye.command.to.remote.subscriber=Sending bye command to Remote Subscriber
