Fixed #177 Close/Reopen of Publisher and Subscriber fails sometimes

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -748,7 +748,7 @@ Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
 Navigator.preferences.saved=Preferences saved
 Navigator.radioButtonAutoRefresh.text=Auto-Refresh
-Navigator.recent.changes=Latest Changelist
+Navigator.recent.changes=Update Changelist
 Navigator.release.notes=Release Notes
 Navigator.remote.connections.must.be.closed=Remote connections must be closed to open a publisher.\nContinue?
 Navigator.saveButton.mnemonic=O
