Closed #178 Back-up stops on first "no available space" error; Other changes, see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1050,7 +1050,7 @@ Transfer.could.not.retrieve.remote.library.file=Could not retrieve remote librar
 Transfer.does.not.exist.skipping=\  ! Does not exist, skipping: 
 Transfer.from.library.not.found=\  ! From library not found: 
 Transfer.mv.directory.file=\  > mv {0, choice, 0#directory |1#file }
-Transfer.no.space.on.any.target.location=No space on any target location of {0} for {1} that is {2}
+Transfer.no.space.on.any.target.location=No space at any location of {0} for {1}, file {3} that is {2}
 Transfer.no.subdirectory.in.path=No subdirectory in path: 
 Transfer.no.target.library.match.found.for.library=No target library match found for library 
 Transfer.of.cancelled=Transfer of {0} cancelled
