Interim commit. Fixed #179, fixed #180, fixed #183, fixed #184. No executable deployment pending a lot of testing.

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -19,7 +19,7 @@ Browser.error.saving.bookmarks=Error saving Bookmarks:
 Browser.error=Error: 
 Browser.home=Home
 Browser.items.selected=\ items selected, 
-Browser.launch.of.items.not.supported=\ items not supported
+Browser.launch.of.items.not.supported=\ items is not supported
 Browser.launch.of=Launch of 
 Browser.library.is.not.loaded=Library {0} is not loaded
 Browser.open.a.publisher=--Open a publisher library--
@@ -457,7 +457,7 @@ Navigator.buttonUp.toolTipText=Up to parent (Alt-Up)
 Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
 Navigator.cannot.find.executable=Cannot find ELS executable:\ 
-Navigator.changes.help.title=Current Build Changelist
+Navigator.changes.help.title=Build Changelist
 Navigator.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
 Navigator.checkBoxTempDated.toolTipText=Add dates to temporary files
 Navigator.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
@@ -1059,8 +1059,8 @@ Transfer.original.storage.location.too.full=Original storage location too full f
 Transfer.previous.directory.was.not.empty=\  ! Directory was not empty: 
 Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
 Transfer.received.subscriber.commands=Received subscriber commands: 
-Transfer.requesting.subscriber.collection=Requesting subscriber collection
-Transfer.requesting.subscriber.library=Requesting subscriber library
+Transfer.requesting.subscriber.collection=Requesting {0} collection
+Transfer.requesting.subscriber.library=Requesting {0} library
 Transfer.requesting.subscriber.targets=Requesting subscriber targets
 Transfer.rm.directory=\  > rm directory: 
 Transfer.rm.file=\  > rm file: 
