Fixed Renamer file not found logic problem; Updated Flatlaf libraries, #109

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -833,18 +833,14 @@ OperationsUI.clear.hints=Clear Hint Tracker/Server from the listed references?  
 OperationsUI.comboBoxOperationHintKeys.0.keys=Hint keys\:
 OperationsUI.comboBoxOperationHintKeys.1.keysOnly=Hint keys, only\:
 OperationsUI.comboBoxOperationHintKeys.prototypeDisplayValue=Hint keys, only
-OperationsUI.comboBoxOperationHintsAndServer.0.hints=Hint Tracker\:
-OperationsUI.comboBoxOperationHintsAndServer.1.hintServer=Hint Server\:
 OperationsUI.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
 OperationsUI.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
 OperationsUI.comboBoxOperationWhatsNew.prototypeDisplayValue=What's New, all
-OperationsUI.config.cancelled=Operation {0} cancelled
 OperationsUI.els.auth.keys.file=ELS Authentication file (*.keys)
 OperationsUI.els.blacklist.file=ELS Blacklist file (*.txt)
 OperationsUI.els.export.items.file=ELS Export Items file (*.json)
 OperationsUI.els.export.text.file=ELS Export Text file (*.txt)
 OperationsUI.els.hint.keys.file=ELS Hint Keys file (*.keys)
-OperationsUI.els.hints.server.file=ELS Hints/Server file (*.json)
 OperationsUI.els.mismatches.file=ELS Mismatches file (*.txt)
 OperationsUI.els.targets.file.json=ELS Targets file (*.json)
 OperationsUI.els.what.s.new.file=ELS What's New file (*.txt)
@@ -1115,6 +1111,7 @@ Z.custom=\ (Custom)
 Z.delete.configuration=Delete Configuration
 Z.delete=Delete
 Z.deleted=Deleted: 
+Z.does.not.exist=File/directory does not exist: 
 Z.done.toolTipText=Close this dialog
 Z.done=Done
 Z.dont.ask.again=Don't ask again
